[project]
name = "crypto-arb-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sortedcontainers>=2.4.0",
    "structlog>=25.5.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.15.12",
]
